# VaR_exploration

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  var_notebook.ipynb
.github/workflows/: ci.yml
notebooks/: var_notebook.ipynb
src/: config.py
src/data/: fetch_data.py
src/risk/: backtests.py  data.py  plotting.py  utils.py  var.py
src/risk.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_backtests.py  test_cli.py  test_integration.py  test_plotting.py  test_utils.py  test_var.py
