[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "risk"
version = "0.1.0"
description = "Quantitative VaR backtesting framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

# runtime dependencies
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "yfinance>=0.2"
]

[project.scripts]
risk-example = "risk.var:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
